[package]
name = "merkle-distributor"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", optional = true, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

orml-traits = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", rev = "26b6fd59ab71429604a81c99ac093d20982c5459", default-features = false }

sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }
#node-primitives = { path = "../../node/primitives", default-features = false, optional = true }
hex-literal = {version = "0.3.1", optional = true}
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true,branch = "release-polkadot-v1.1.0" }

[dev-dependencies]
orml-tokens = { git = "https://github.com/moonbeam-foundation/open-runtime-module-library", rev = "26b6fd59ab71429604a81c99ac093d20982c5459", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "serde/std",
    "scale-info/std",
    "sp-core/std",
    "frame-system/std",
    "sp-runtime/std",
    "frame-support/std",
    "orml-traits/std",
    "orml-tokens/std",
    "pallet-balances/std",
    "hex-literal",
    "sp-io/std"
]

runtime-benchmarks = [
    "frame-benchmarking",
#    "node-primitives",
    "hex-literal",
    "sp-io",
]
try-runtime = [ "frame-support/try-runtime" ]
